# CommUI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: button.h  check_box.h  group_box.h  line_edit.h  widget.h  window.h
src/: button.cpp  check_box.cpp  group_box.cpp  main.cpp  widget.cpp  window.cpp
src/gtk+/: button.cpp  check_box.cpp  group_box.cpp  line_edit.cpp  window.cpp
src/windows/: button.cpp  check_box.cpp  group_box.cpp  line_edit.cpp  window.cpp
